
bin_PROGRAMS = spatter
spatter_SOURCES = ./util/util.hpp ./util/util.cpp ./ui/console_ui.hpp ./ui/console_ui.cpp ./main.cpp ./dht/protocol/messages.hpp ./dht/protocol/search_manager.hpp ./dht/protocol/control_protocol.hpp ./dht/protocol/messages.cpp ./dht/protocol/control_protocol.cpp ./dht/protocol/search_manager.cpp ./dht/DHT.hpp ./dht/NodeQueue.hpp ./dht/NodeQueue.cpp ./dht/DHT.cpp ./Config.cpp ./Config.hpp ./lib/tigertree/tiger/sboxes.cpp ./lib/tigertree/tiger/tiger.cpp

